--- a/src/sass/_accordion_faq.scss
+++ b/src/sass/_accordion_faq.scss
@@ -1,7 +1,6 @@
 .accordion__faq {
   margin-left: 50%;
   margin-top: 30px;
-  float: right;
   width: 40%;
   .title {
     font-size: 20px;
@@ -30,6 +29,7 @@
         justify-content: space-between;
         font-size: 15px;
         padding: 20px 0;
+        color: $very-dark-grayish-blue;
         cursor: pointer;
         .question__icon {
           width: 13px;
@@ -45,6 +45,7 @@
         }
       }
       .answer {
+        color: $dark-grayish-blue;
         display: none;
         font-size: 13px;
         padding: 10px;
