--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -6,6 +6,6 @@ $very-dark-desaturated-blue: hsl(238, 29%, 16%);
 $soft-red: hsl(14, 88%, 65%);
 //neutral colors
 $very-dark-grayish-blue: hsl(237, 12%, 33%);
-$dark-grayidh-blue: hsl(240, 6%, 50%);
+$dark-grayish-blue: hsl(240, 6%, 50%);
 //dividers
 $light-grayish-blue: hsl(240, 5%, 91%);
